--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper">
         <div class="maincontent">
-            <section class="hero">
+            <section class="section hero">
                 <div class="container hero__container">
                     <header class="header">
                         <img src="./img/logo.png" alt="Logo">
@@ -63,7 +63,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section">
+            <section class="section benefits">
                 <div class="container">
                     <div class="headline">
                         <h2 class="section__title headline__title">Почему Surfboard?</h2>
@@ -71,7 +71,7 @@
                             Мы создаем уникальные и качественные доски из прочных и экологичных материалов.
                         </div>
                     </div>
-                    <ul class="benefits">
+                    <ul class="benefits__list">
                         <li class="benefits__item benefit">
                             <div class="benefit__image">
                                 <div class="benefit__image-wrapper">
@@ -125,10 +125,10 @@
                     </ul>
                 </div>
             </section>
-            <section class="section">
+            <section class="section reviews">
                 <div class="container">
                     <h2 class="section__title">Отзывы</h2>
-                    <div class="reviews">
+                    <div class="reviews__container">
                         <div class="reviews__display">
                             <div class="reviews__display-inner">
                                 <div class="reviews__avatar">
@@ -168,7 +168,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section order-section">
+            <section class="section order">
                 <div class="container">
                     <h2 class="section__title section__title--white">Закажите доску</h2>
                     <form action="#" class="form">
