--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <div class="hero__title-descr">Самый большой выбор серфбордов в мире</div>
                         <a href="#" class="btn btn--yellow">Заказать</a>
                     </div>
-                    <div class="hero__icons--section">
+                    <div class="hero__icons-section">
                         <ul class="features">
                             <li class="features__item feature">
                                 <div class="feature__icon">
