--- a/index.html
+++ b/index.html
@@ -16,26 +16,33 @@
                 <div class="container hero__container">
                     <header class="header">
                         <svg class="header__img">
-                            <use xlink:href="./img/sprite.svg#logo"></use>
+                            <use xlink:href="./img/icons/sprite.svg#logo"></use>
                         </svg>
-                        <nav class="menu">
-                            <ul class="menu__list">
-                                <li class="menu__item"><a href="#" class="menu__link">О нас</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">Серфборды</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">Команда</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">Меню</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">Отзывы</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">Как мы работаем</a></li>
-                                <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
+                        <nav class="menu top-menu">
+                            <ul class="menu__list top-menu__list">
+                                <li class="menu__item top-menu__item"><a href="#" class="menu__link top-menu__link">О
+                                        нас</a></li>
+                                <li class="menu__item top-menu__item"><a href="#"
+                                        class="menu__link top-menu__link">Серфборды</a></li>
+                                <li class="menu__item top-menu__item"><a href="#"
+                                        class="menu__link top-menu__link">Команда</a></li>
+                                <li class="menu__item top-menu__item"><a href="#"
+                                        class="menu__link top-menu__link">Меню</a></li>
+                                <li class="menu__item top-menu__item"><a href="#"
+                                        class="menu__link top-menu__link">Отзывы</a></li>
+                                <li class="menu__item top-menu__item"><a href="#" class="menu__link top-menu__link">Как
+                                        мы работаем</a></li>
+                                <li class="menu__item top-menu__item"><a href="#"
+                                        class="menu__link top-menu__link">Контакты</a></li>
                             </ul>
                         </nav>
                         <a href="tel:+78009039090" class="phone-number header__phone-number">
                             <svg class="phone-number__icon phone-number__icon--white">
-                                <use xlink:href="./img/sprite.svg#phone"></use>
+                                <use xlink:href="./img/icons/sprite.svg#phone"></use>
                             </svg>
                             <span class="phone-number__text">8 800 903 90 90</span>
                         </a>
-                        <a href="" class="hamburger">
+                        <a href="" class="hamburger" id="mobile-menu-open">
                             <span class="hamburger__plank"></span>
                             <span class="hamburger__plank"></span>
                             <span class="hamburger__plank"></span>
@@ -50,19 +57,19 @@
                         <ul class="features">
                             <li class="features__item feature">
                                 <svg class="feature__icon">
-                                    <use xlink:href="./img/sprite.svg#design"></use>
+                                    <use xlink:href="./img/icons/sprite.svg#design"></use>
                                 </svg>
                                 <div class="feature__text">Уникальный дизайн</div>
                             </li>
                             <li class="features__item feature">
                                 <svg class="feature__icon">
-                                    <use xlink:href="./img/sprite.svg#matherials"></use>
+                                    <use xlink:href="./img/icons/sprite.svg#matherials"></use>
                                 </svg>
                                 <div class="feature__text">Прочные материалы</div>
                             </li>
                             <li class="features__item feature">
                                 <svg class="feature__icon">
-                                    <use xlink:href="./img/sprite.svg#shipping"></use>
+                                    <use xlink:href="./img/icons/sprite.svg#shipping"></use>
                                 </svg>
                                 <div class="feature__text">Быстрая доставка</div>
                             </li>
@@ -83,7 +90,7 @@
                             <div class="benefit__image">
                                 <div class="benefit__image-wrapper">
                                     <svg class="benefit__icon">
-                                        <use xlink:href="./img/sprite.svg#perfectfit"></use>
+                                        <use xlink:href="./img/icons/sprite.svg#perfectfit"></use>
                                     </svg>
                                 </div>
                             </div>
@@ -102,7 +109,7 @@
                             <div class="benefit__image">
                                 <div class="benefit__image-wrapper">
                                     <svg class="benefit__icon">
-                                        <use xlink:href="./img/sprite.svg#strong"></use>
+                                        <use xlink:href="./img/icons/sprite.svg#strong"></use>
                                     </svg>
                                 </div>
                             </div>
@@ -121,7 +128,7 @@
                             <div class="benefit__image">
                                 <div class="benefit__image-wrapper">
                                     <svg class="benefit__icon">
-                                        <use xlink:href="./img/sprite.svg#unique"></use>
+                                        <use xlink:href="./img/icons/sprite.svg#unique"></use>
                                     </svg>
                                 </div>
                             </div>
@@ -136,6 +143,114 @@
                             </div>
                         </li>
                     </ul>
+                </div>
+            </section>
+            <section class="section slider">
+                <div class="container slider__container">
+                    <div class="slider__col slider-controls">
+                        <svg class="slider-control slider-control--left" id="slider-control-left">
+                            <use xlink:href="./img/icons/sprite.svg#slider-control-left"></use>
+                        </svg>
+                    </div>
+                    <ul class="slider__col slider__list">
+                        <li class="slider__slide slide">
+                            <div class="slide__image">
+                                <svg class="slide__image-background">
+                                    <use xlink:href="./img/icons/sprite.svg#product-background"></use>
+                                </svg>
+                                <img src="./img/content/longboard.png" alt="longboard" class="slide__image-item">
+                            </div>
+                            <div class="slide__text product">
+                                <div class="slide__row">
+                                    <div class="product__dropdown-element">
+                                        <svg class="product__dropdown-icon">
+                                            <use xlink:href="./img/icons/sprite.svg#product-dropdown-icon"></use>
+                                        </svg>
+                                        <div class="product__dropdown-name">Параметры</div>
+                                        <div class="product__dropdown-block dropdown-block">
+                                            <div class="dropdown-block__row">
+                                                <div class="dropdown-block__param">
+                                                    <svg class="dropdown-block__param-img">
+                                                        <use xlink:href="./img/icons/sprite.svg#product-length"></use>
+                                                    </svg>
+                                                    Длина доски
+                                                </div>
+                                                <div class="dropdown-block__param-value">от 2,5 м</div>
+                                            </div>
+                                            <div class="dropdown-block__row">
+                                                <div class="dropdown-block__param">
+                                                    <svg class="dropdown-block__param-img">
+                                                        <use xlink:href="./img/icons/sprite.svg#product-width"></use>
+                                                    </svg>
+                                                    Ширина доски
+                                                </div>
+                                                <div class="dropdown-block__param-value">от 40 см</div>
+                                            </div>
+                                            <div class="dropdown-block__row">
+                                                <div class="dropdown-block__param">
+                                                    <svg class="dropdown-block__param-img">
+                                                        <use xlink:href="./img/icons/sprite.svg#product-thickness"></use>
+                                                    </svg>
+                                                    Толщина
+                                                </div>
+                                                <div class="dropdown-block__param-value">8 см</div>
+                                            </div>
+                                            <div class="dropdown-block__row">
+                                                <div class="dropdown-block__param">
+                                                    <svg class="dropdown-block__param-img">
+                                                        <use xlink:href="./img/icons/sprite.svg#product-lifetime"></use>
+                                                    </svg>
+                                                    Срок службы
+                                                </div>
+                                                <div class="dropdown-block__param-value">5 лет</div>
+                                            </div>
+                                            <div class="dropdown-block__row">
+                                                <div class="dropdown-block__param">
+                                                    <svg class="dropdown-block__param-img">
+                                                        <use xlink:href="./img/icons/sprite.svg#product-weight"></use>
+                                                    </svg>
+                                                    Вес
+                                                </div>
+                                                <div class="dropdown-block__param-value">7-8 кг</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="slide__row product__title">
+                                    Лонгборд 2.0
+                                </div>
+                                <div class="slide__row product__descr">
+                                    Устойчивая доска для новичков. На них легко лежать, сидеть, грести, разгребаться
+                                    на волны и ехать.
+                                    Размер и плавучесть доски позволяет брать очень маленькие и пологие волны и не
+                                    спеша, не прилагая особых усилий ехать по ним.
+                                </div>
+                                <div class="slide__row">
+                                    <div class="slide__col">
+                                        <div class="product__param">Длина доски</div>
+                                        <div class="product__param product__param--value">от 2,5 метров</div>
+                                    </div>
+                                    <div class="slide__col">
+                                        <div class="product__param">Ширина доски</div>
+                                        <div class="product__param product__param--value">от 40 сантиметров</div>
+                                    </div>
+                                </div>
+                                <div class="slide__row">
+                                    <div class="slide__col">
+                                        <div class="product__price">7000</div>
+                                    </div>
+                                    <div class="slide__col">
+                                        <a href="#" class="slide__button btn btn--yellow">Заказать</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="slider__col slider-controls">
+                        <svg class="slider-control slider-control--right" id="slider-control-right">
+                            <use xlink:href="./img/icons/sprite.svg#slider-control-right"></use>
+                        </svg>
+                    </div>
                 </div>
             </section>
             <section class="section reviews">
@@ -266,7 +381,7 @@
                     <div class="footer__street address__street">Москва, ул.Новый Арбат, д.31/12</div>
                     <a href="tel:+78009039090" class="phone-number footer__phone-number address__phone">
                         <svg class="phone-number__icon">
-                            <use xlink:href="./img/sprite.svg#phone"></use>
+                            <use xlink:href="./img/icons/sprite.svg#phone"></use>
                         </svg>
                         <span class="phone-number__text">8 800 903 90 90</span>
                     </a>
@@ -276,28 +391,28 @@
                         <li class="social__item">
                             <a href="#" class="social__link">
                                 <svg class="social__icon">
-                                    <use xlink:href="./img/sprite.svg#vk"></use>
+                                    <use xlink:href="./img/icons/sprite.svg#vk"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social__item">
                             <a href="#" class="social__link">
                                 <svg class="social__icon">
-                                    <use xlink:href="./img/sprite.svg#fb"></use>
+                                    <use xlink:href="./img/icons/sprite.svg#fb"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social__item">
                             <a href="#" class="social__link">
                                 <svg class="social__icon">
-                                    <use xlink:href="./img/sprite.svg#in"></use>
+                                    <use xlink:href="./img/icons/sprite.svg#in"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social__item">
                             <a href="#" class="social__link">
                                 <svg class="social__icon">
-                                    <use xlink:href="./img/sprite.svg#tw"></use>
+                                    <use xlink:href="./img/icons/sprite.svg#tw"></use>
                                 </svg>
                             </a>
                         </li>
@@ -319,6 +434,23 @@
             <li class="fixed-menu__item"><a href="#" class="fixed-menu__link"></a></li>
         </ul>
     </nav>
+    <nav class="menu mobile-menu">
+        <a href="#" class="mobile-menu__close hamburger hamburger--close" id="mobile-menu-close">
+            <span class="hamburger__plank hamburger__plank--close"></span>
+            <span class="hamburger__plank hamburger__plank--close"></span>
+        </a>
+        <ul class="menu__list mobile-menu__list">
+            <li class="menu__item mobile-menu__item"><a href="#" class="menu__link mobile-menu__link">О нас</a></li>
+            <li class="menu__item mobile-menu__item"><a href="#" class="menu__link mobile-menu__link">Серфборды</a></li>
+            <li class="menu__item mobile-menu__item"><a href="#" class="menu__link mobile-menu__link">Команда</a></li>
+            <li class="menu__item mobile-menu__item"><a href="#" class="menu__link mobile-menu__link">Меню</a></li>
+            <li class="menu__item mobile-menu__item"><a href="#" class="menu__link mobile-menu__link">Отзывы</a></li>
+            <li class="menu__item mobile-menu__item"><a href="#" class="menu__link mobile-menu__link">Как мы
+                    работаем</a></li>
+            <li class="menu__item mobile-menu__item"><a href="#" class="menu__link mobile-menu__link">Контакты</a></li>
+        </ul>
+    </nav>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
