--- a/index.html
+++ b/index.html
@@ -539,7 +539,11 @@
                             <div class="form__controls">
                                 <label class="radio radio--checkbox">
                                     <input type="checkbox" class="radio__elem" name="callback">
-                                    <div class="radio__visible"></div>
+                                    <div class="radio__visible">
+                                        <svg class="radio__visible-tick">
+                                            <use xlink:href="./img/icons/sprite.svg#tick"></use>
+                                        </svg>
+                                    </div>
                                     <div class="radio__title">Не перезванивать</div>
                                 </label>
                             </div>
