--- a/src/index.html
+++ b/src/index.html
@@ -537,8 +537,10 @@
                     <div class="player__container">
                         <div class="player__item">
                             <div class="player__wrapper">
-                                <video class="player__video">
+                                <video preload="auto" playsinline="" class="player__video">
                                     <source src="./video/video.mp4" type="video/mp4">
+                                    <source src="./video/video.webm" type="video/webm">
+                                    <source src="./video/video.ogv" type="video/ogv">
                                 </video>
                                 <div class="player__splash"></div>
                             </div>
